<resources>
    <string name="app_name">Popular Movies</string>

    <!--Used in overflow menu to sort movie posters in various ways-->
    <string name="menu_most_popular">Most Popular</string>
    <string name="menu_highest_rated">Highest Rated</string>
    <string name="menu_favorites">Favorites</string>

    <!--Toast message shown after overflow menu item is clicked-->
    <string name="toast_most_popular">Most popular movies.</string>
    <string name="toast_highest_rated">Highest rated movies.</string>
    <string name="toast_favorites">Favorite movies.</string>

    <!--Labels used in activity_movie_details.xml-->
    <string name="release_date_label">Release Date</string>
    <string name="vote_average_label">Average Rating</string>
    <string name="overview_label">Overview</string>
    <string name="videos_label">Videos</string>
    <string name="reviews_label">Reviews</string>

    <!--Error messages when retrieving posters, movie details or favorites-->
    <string name="error_server">Unable to establish connection. Server maybe down.\n\n Please try again later.</string>
    <string name="error_server_status">HTTP Status code: </string>
    <string name="error_internet">Unable to establish connection.\n\n Please check your
        Cell/Wi-Fi signal and try again.</string>
    <string name="error_empty_list">Unable to retrieve movies.\n\n Please try again.</string>
    <string name="error_remove_favorite">Removing from favorites failed. Try again.</string>
    <string name="error_add_favorite">Adding to favorites failed. Try again.</string>
    <string name="error_empty_favorites">You have no favorites.</string>

    <!-- Toast messages when a movie is successfully added or removed to/from `Favorites`-->
    <string name="added_to_favorites">Added to Favorites.</string>
    <string name="removed_from_favorites">Removed from Favorites.</string>

    <!--Message displayed to user when no movie release date, or votes are found-->
    <string name="error_missing_info">Unknown</string>

    <!--Button to retry connection to the server-->
    <string name="button_try_again">Retry</string>

    <!--Error messages videoslers reviewiews-->
    <string name="error_trailers">No videos found.</string>
    <string name="error_reviews">No reviews found.</string>

    <!--a11y used in activity_movie_details.xml and poster_grid_item.xml-->
    <string name="poster_a11y">Movie poster</string>
    <string name="backdrop_a11y">Movie backdrop</string>
    <string name="trailer_a11y">Movie trailer</string>
    <string name="play_trailer_a11y">Play movie trailer</string>

    <!--tools:text used in activity_movie_details.xml-->
    <string name="toolstext_title" translatable="false">Dilwale Dulhania Le Jayenge</string>
    <string name="toolstext_release_date" translatable="false">1995-10-20</string>
    <string name="toolstext_vote_average" translatable="false">9.2</string>
    <string name="toolstext_overview" translatable="false">Raj is a rich, carefree, happy-go-lucky
        second generation NRI. Simran is the daughter of Chaudhary Baldev Singh, who in spite of
        being an NRI is very strict about adherence to Indian values. Simran has left for India to
        be married to her childhood fiancé. Raj leaves for India with a mission at his hands, to
        claim his lady love under the noses of her whole family. Thus begins a saga.</string>

    <!--tools:text used in trailer_list_item.xml-->
    <string name="toolstext_trailer_name" translatable="false">Ho Gaya Hai Tujhko To Pyar
        Sajna - song by CinePlusPlus</string>

    <!--tools:text used in review_list_item.xml-->
    <string name="toolstext_review_author" translatable="false">MohamedElsharkawy</string>
    <string name="toolstext_review_content" translatable="false">The Dilwale Dulhania Le Jayenge
        is a film considered by most to be one of the greatest ever made. From The American Film
        Institute to as voted by users on the Internet Movie Database (IMDB) it is consider to be
        one of the best.</string>
</resources>
