<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.slackar.popularmovies.MovieDetailsActivity">

    <ScrollView
        android:id="@+id/movie_details_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backdrop_iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/backdrop_a11y"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/backdrop_example" />

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backdrop_iv"
                tools:text="@string/toolstext_title" />

            <TextView
                android:id="@+id/release_date_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/release_date_label"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/vote_average_label_tv"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_tv" />

            <TextView
                android:id="@+id/release_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/release_date_label_tv"
                app:layout_constraintStart_toStartOf="@+id/release_date_label_tv"
                app:layout_constraintTop_toBottomOf="@+id/release_date_label_tv"
                tools:text="@string/toolstext_release_date" />

            <TextView
                android:id="@+id/vote_average_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_average_label"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/release_date_label_tv"
                app:layout_constraintTop_toTopOf="@+id/release_date_label_tv" />

            <TextView
                android:id="@+id/vote_average_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/vote_average_label_tv"
                app:layout_constraintStart_toStartOf="@+id/vote_average_label_tv"
                app:layout_constraintTop_toBottomOf="@+id/vote_average_label_tv"
                tools:text="@string/toolstext_vote_average" />

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/release_date_tv"
                tools:text="@string/toolstext_overview" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/details_loading_pb"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_centerInParent="true" />

    <include
        android:id="@+id/error_message_details"
        layout="@layout/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>